# per-app-vol

./: README.md  package.json  pixelmator-app-template.pxd  pnpm-lock.yaml  pnpm-workspace.yaml
.cspell/: cspell-ext.txt
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs  mixer.rs
src-tauri/src/audio/: device.rs  guard.rs  listener.rs
src-tauri/src/manager/: popover.rs
src/app/: globals.css  page.tsx
src/components/mixer/: application-row.tsx  mixer-panel.tsx  system-volume.tsx  types.ts  use-mixer.ts
src/components/ui/: slider.tsx
