[package]
authors = ["Clover You <hi@clovu.me>"]
description = "Volume mixer for macOS. Adjust volume levels for individual apps independently"
edition = "2024"
license-file = "../LICENSE"
name = "per-app-vole"
readme = "../README.md"
repository = "https://github.com/clovu/per-app-vole"
version = "0.1.0"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "per_app_vole_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.103"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-nspopover = { git = "https://github.com/freethinkel/tauri-nspopover-plugin.git", version = "4.1.0" }
tauri-plugin-shell = "2.3.5"
tauri-utils = "2.9.3"
tokio = { version = "1.52.3", features = ["tokio-macros", "macros"] }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = [
  "NSRunningApplication",
  "libc",
] }
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
